package fr.eni.bookhub.bookcopy.entity;

public enum BookStatus {
    AVAILABLE,
    LOANED,
    LOST,
    IN_REPAIR,
    RESERVED,
}
