package fr.eni.bookhub.bookcopy.entity;

public enum Condition {
    NEW,
    GOOD,
    WORN,
    DAMAGED,
}
