package fr.eni.bookhub.loan.entity;

public enum LoanStatus {
    ACTIVE,
    RETURNED,
    OVERDUE
    }
