package fr.eni.bookhub.review.entity;

public enum ReviewStatus {
    ACTIVE,
    MODERATED
}
