package fr.eni.bookhub.user.entity;

public enum Role {
    ROLE_USER,
    ROLE_ADMIN,
    ROLE_LIBRARIAN
}