export type ReservationStatus =
    | 'PENDING'
    | 'READY_FOR_PICKUP'
    | 'FULFILLED'
    | 'CANCELLED'
    | 'EXPIRED';