classDiagram
    class User {
        -Long id
        -String firstname
        -String lastname
        -String phone
        -String username
        -String email
        -String password
        -Role role
        +getDisplayUsername() String
    }

    class Author {
        -Long id
        -String firstname
        -String lastname
        -String penName
    }

    class Genre {
        -Long id
        -String label
    }

    class Book {
        -Long id
        -String title
        -String isbn
        -String img
        -LocalDate publishDate
        -String description
    }

    class BookCopy {
        -Long id
        -String serialNumber
        -BookStatus bookStatus
        -Condition condition
    }

    class Loan {
        -Long id
        -LocalDate loanDate
        -LocalDate dueDate
        -LocalDate returnDate
        -LoanStatus status
    }

    class Reservation {
        -Long id
        -LocalDateTime reservesDate
        -ReservationStatus status
        -LocalDateTime notifiedAt
        -LocalDateTime pickupDeadline
    }

    class Review {
        -Long id
        -int rating
        -String comment
        -ReviewStatus status
        -LocalDateTime createdAt
        -LocalDateTime updatedAt
        -LocalDateTime moderatedAt
    }

    class RefreshToken {
        -Long id
        -String tokenHash
        -Instant expiresAt
        -boolean revoked
        +isExpired() boolean
    }

    class Role {
        <<enumeration>>
        ROLE_USER
        ROLE_ADMIN
        ROLE_LIBRARIAN
    }

    class BookStatus {
        <<enumeration>>
        AVAILABLE
        LOANED
        LOST
        IN_REPAIR
        RESERVED
    }

    class Condition {
        <<enumeration>>
        NEW
        GOOD
        WORN
        DAMAGED
    }

    class LoanStatus {
        <<enumeration>>
        ACTIVE
        RETURNED
        OVERDUE
    }

    class ReservationStatus {
        <<enumeration>>
        PENDING
        READY_FOR_PICKUP
        FULFILLED
        CANCELLED
        EXPIRED
    }

    class ReviewStatus {
        <<enumeration>>
        ACTIVE
        MODERATED
    }

    Book "*" -- "*" Genre : genres
    Book "*" -- "*" Author : authors
    Book "1" *-- "*" BookCopy : copies

    Loan "*" --> "1" User : loaner
    Loan "*" --> "1" BookCopy : bookCopyLoaned

    Reservation "*" --> "1" User : user
    Reservation "*" --> "1" Book : book
    Reservation "*" --> "0..1" BookCopy : bookCopy

    Review "*" --> "1" User : user
    Review "*" --> "1" Book : book

    RefreshToken "*" --> "1" User : user

    User -- Role
    BookCopy -- BookStatus
    BookCopy -- Condition
    Loan -- LoanStatus
    Reservation -- ReservationStatus
    Review -- ReviewStatus